fix: disruptor错误
1. 如果使用disruptor消费，event必须使用try-catch不然会有问题